--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -1,4 +1,6 @@
-pre.highlight { background-color: #272822; }
+pre.highlight { 
+  background-color: #272822; 
+}
 .highlight code { color: #f8f8f2 } /* Default code */
 .highlight .hll { background-color: #272822; }
 .highlight .c { color: #75715e } /* Comment */
