--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,3 +8,5 @@ layout: default
   {{ content }}
 </div>
 
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1610787"></script>
