Revert "add cnzz"
This reverts commit 5fa5f0394baae63bad08027a80505293ec93b0d9.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,6 +29,6 @@
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub</a>
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved. <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261870041'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1261870041%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></p>
+    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
