--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -338,6 +338,7 @@ tbody tr:nth-child(odd) th {
 .post-title,
 .post-title a {
   color: #303030;
+  font-size: 2.6rem;
 }
 .page-title,
 .post-title {
