--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,4 +31,15 @@
   {% if site.google_analytics %}
     {% include analytics.html %}
   {% endif %}
+
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?205707566077f4447dfb06bac31642c2";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+    
 </head>
