feat:dark mode for table of content

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,9 @@
     .main h1 {
         @apply text-3xl md:text-4xl font-extrabold tracking-tight my-4;
     }
+    .main h2 {
+        @apply mb-4 text-gray-600 dark:text-gray-300;
+    }
     .main :not(pre) > code {
         @apply font-mono bg-gray-200 text-gray-500 px-1 mx-1;
     }
@@ -22,7 +25,7 @@
         @apply break-words;
     }
     .blog-post-content h2 {
-        @apply text-2xl md:text-3xl font-extrabold tracking-tight my-3 ;
+        @apply text-2xl md:text-3xl font-extrabold tracking-tight my-3;
     }
     .blog-post-content h3 {
         @apply text-xl md:text-2xl font-extrabold tracking-tight my-3;
@@ -52,13 +55,16 @@
         @apply mb-4;
     }
     .table-of-content {
-        @apply border border-gray-500 bg-blue-100 my-4 p-4 inline-block overflow-auto;
+        @apply border border-blue-500 dark:border-blue-800 bg-blue-200 my-4 p-4 inline-block overflow-auto dark:bg-blue-500;
+    }
+    .main .table-of-content a {
+        @apply text-gray-800 dark:text-gray-200;
     }
     .table-of-content ul {
         @apply mb-0;
     }
     .table-of-content h2 {
-        @apply text-xl font-semibold tracking-tight my-3
+        @apply text-xl font-semibold tracking-tight my-3;
     }
     .table-of-content p {
         @apply m-0 inline;
