--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,7 @@
         @apply text-gray-800 dark:text-gray-200;
     }
     .main h1 {
-        @apply text-3xl md:text-4xl xl:text-5xl font-extrabold tracking-tight my-4;
+        @apply text-3xl md:text-4xl xl:text-5xl font-extrabold tracking-tight mt-8 mb-4;
     }
     .main h2 {
         @apply mb-4 text-gray-600 dark:text-gray-300;
